<resources>
    <string name="app_name">loginscreen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome back</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome">Welcome</string>
    <string name="username2">Username2</string>
    <string name="password2">Password2</string>
    <string name="valider">Valider</string>
</resources>